--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openMRSVersion>1.9.9</openMRSVersion>
-        <addresshierarchyrwandaVersion>1.2.5-SNAPSHOT</addresshierarchyrwandaVersion>
+        <addresshierarchyrwandaVersion>1.2.6</addresshierarchyrwandaVersion>
         <appframeworkVersion>2.4</appframeworkVersion>
         <appuiVersion>1.3</appuiVersion>
         <calculationVersion>1.1</calculationVersion>
@@ -212,6 +212,13 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>rwandaprimarycare-api</artifactId>
             <version>${rwandaprimarycareVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>addresshierarchyrwanda-api</artifactId>
+            <version>${addresshierarchyrwandaVersion}</version>
             <scope>provided</scope>
         </dependency>
 
