--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <emrmonitorVersion>1.0-SNAPSHOT</emrmonitorVersion>
         <formfilterVersion>1.2</formfilterVersion>
         <groovyVersion>2.2.4</groovyVersion>
-        <heightweighttrackerVersion>1.1-SNAPSHOT</heightweighttrackerVersion>
+        <heightweighttrackerVersion>1.0.3</heightweighttrackerVersion>
         <htmlformentryVersion>2.6</htmlformentryVersion>
         <htmlformentry19extVersion>1.6.1</htmlformentry19extVersion>
         <htmlformflowsheetVersion>1.3</htmlformflowsheetVersion>
@@ -155,6 +155,13 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>idgen-api</artifactId>
             <version>${idgenVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        
+         <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>heightweighttracker-api</artifactId>
+            <version>${heightweighttrackerVersion}</version>
             <scope>provided</scope>
         </dependency>
 
