Add missing imbemr dependency

--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -14,6 +14,7 @@ omod.htmlformentry19ext=${htmlformentry19extVersion}
 omod.htmlformflowsheet=${htmlformflowsheetVersion}
 omod.htmlwidgets=${htmlwidgetsVersion}
 omod.idgen=${idgenVersion}
+omod.imbemr=${project.parent.version}
 omod.logic=${logicVersion}
 omod.logic.type=omod
 omod.metadatamapping=${metadatamappingVersion}
