--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <reportingVersion>0.10.1</reportingVersion>
         <reportingcompatibilityVersion>1.5.8</reportingcompatibilityVersion>
         <reportingobjectgroupVersion>1.1</reportingobjectgroupVersion>
-        <rowperpatientreportsVersion>1.5.3</rowperpatientreportsVersion>
+        <rowperpatientreportsVersion>1.5.4-SNAPSHOT</rowperpatientreportsVersion>
         <rwandahivflowsheetVersion>0.5.5</rwandahivflowsheetVersion>
         <rwandaprimarycareVersion>2.0.7</rwandaprimarycareVersion>
         <rwandareportsVersion>2.5.8-SNAPSHOT</rwandareportsVersion>
