--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <reportingobjectgroupVersion>1.1</reportingobjectgroupVersion>
         <rowperpatientreportsVersion>1.5.4-SNAPSHOT</rowperpatientreportsVersion>
         <rwandahivflowsheetVersion>0.5.5</rwandahivflowsheetVersion>
-        <rwandaprimarycareVersion>2.0.7</rwandaprimarycareVersion>
+        <rwandaprimarycareVersion>2.0.8-SNAPSHOT</rwandaprimarycareVersion>
         <rwandareportsVersion>2.5.8-SNAPSHOT</rwandareportsVersion>
         <serializationVersion>0.2.11</serializationVersion>
         <simplelabentryVersion>1.8</simplelabentryVersion>
