override login page

--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -15,8 +15,7 @@ omod.htmlformflowsheet=${htmlformflowsheetVersion}
 omod.htmlwidgets=${htmlwidgetsVersion}
 omod.idgen=${idgenVersion}
 omod.imbemr=${project.parent.version}
-omod.logic=${logicVersion}
-omod.logic.type=omod
+#omod.logic=${logicVersion}
 omod.metadatamapping=${metadatamappingVersion}
 omod.metadatasharing=${metadatasharingVersion}
 # omod.mohbilling=${mohbillingVersion}
@@ -42,4 +41,5 @@ omod.omodexport=${omodExportVersion}
 omod.validation=${validationVersion}
 omod.validation.type=omod
 omod.patientflags=${patientFlagsVersion}
+omod.metadatadeploy=${metadatadeployVersion}
 db.h2.supported=false
