Error: org.openmrs.ui.framework.MissingRequiredParameterException: Required: app

--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -7,7 +7,7 @@ omod.appui=${appuiVersion}
 omod.calculation=${calculationVersion}
 omod.emrmonitor=${emrmonitorVersion}
 omod.formfilter=${formfilterVersion}
-omod.groovy=${groovyVersion}
+#omod.groovy=${groovyVersion}
 omod.heightweighttracker=${heightweighttrackerVersion}
 omod.htmlformentry=${htmlformentryVersion}
 omod.htmlformentry19ext=${htmlformentry19extVersion}
@@ -42,4 +42,13 @@ omod.validation=${validationVersion}
 omod.validation.type=omod
 omod.patientflags=${patientFlagsVersion}
 omod.metadatadeploy=${metadatadeployVersion}
+omod.registrationcore=${registrationcoreVersion}
+omod.registrationapp=${registrationappVersion}
+omod.emrapi=${emrapiVersion}
+omod.providermanagement=${providermanagementVersion}
+omod.uilibrary=${uilibraryVersion}
+omod.htmlformentryui=${htmlformentryuiVersion}
+omod.event=${eventVersion}
+omod.event.groupId=org.openmrs
+omod.coreapps=${coreappsVersion}
 db.h2.supported=false
