--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -255,11 +255,66 @@
 				</dependency>
 				<dependency>
 					<groupId>org.openmrs.module</groupId>
-					<artifactId>metadatadeploy-api</artifactId>
+					<artifactId>metadatadeploy-omod</artifactId>
 					<version>${metadatadeployVersion}</version>
-					<type>jar</type>
 					<scope>provided</scope>
 				</dependency>
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>uilibrary-omod</artifactId>
+					<version>${uilibraryVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>providermanagement-omod</artifactId>
+					<version>${providermanagementVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs</groupId>
+					<artifactId>event-omod</artifactId>
+					<version>${eventVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>emrapi-omod</artifactId>
+					<version>${emrapiVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>coreapps-omod</artifactId>
+					<version>${coreappsVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>htmlformentryui-omod</artifactId>
+					<version>${htmlformentryuiVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>registrationapp-omod</artifactId>
+					<version>${registrationappVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.openmrs.module</groupId>
+					<artifactId>registrationcore-omod</artifactId>
+					<version>${registrationcoreVersion}</version>
+					<scope>provided</scope>
+				</dependency>
+
+
 			</dependencies>
 
 			<build>
