--- a/pom.xml
+++ b/pom.xml
@@ -38,44 +38,54 @@
         <addresshierarchyrwandaVersion>1.2.8</addresshierarchyrwandaVersion>
         <appframeworkVersion>2.10.0</appframeworkVersion>
         <appuiVersion>1.8.0</appuiVersion>
-        <calculationVersion>1.1</calculationVersion>
+        <calculationVersion>1.2</calculationVersion>
         <emrmonitorVersion>1.0.2</emrmonitorVersion>
         <formfilterVersion>1.2</formfilterVersion>
         <groovyVersion>2.2.4</groovyVersion>
         <heightweighttrackerVersion>1.0.3</heightweighttrackerVersion>
-        <htmlformentryVersion>3.1</htmlformentryVersion>
+        <htmlformentryVersion>3.3.0</htmlformentryVersion>
         <htmlformentry19extVersion>1.7</htmlformentry19extVersion>
         <htmlformflowsheetVersion>1.4.1</htmlformflowsheetVersion>
         <htmlwidgetsVersion>1.7.2</htmlwidgetsVersion>
-        <idgenVersion>4.0</idgenVersion>
+        <idgenVersion>4.4.0</idgenVersion>
         <!--<logicVersion>0.5.2</logicVersion>-->
-        <metadatamappingVersion>1.0.2</metadatamappingVersion>
-        <metadatasharingVersion>1.2</metadatasharingVersion>
+        <metadatamappingVersion>1.2.1</metadatamappingVersion>
+        <metadatasharingVersion>1.2.2</metadatasharingVersion>
         <mohbillingVersion>1.0-SNAPSHOT</mohbillingVersion>
         <namephoneticsVersion>1.5</namephoneticsVersion>
         <orderextensionVersion>2.0-SNAPSHOT</orderextensionVersion>
         <patientsummaryVersion>2.1</patientsummaryVersion>
-        <reportingVersion>0.10.1</reportingVersion>
+        <reportingVersion>0.10.4</reportingVersion>
         <reportingcompatibilityVersion>1.5.8</reportingcompatibilityVersion>
         <reportingobjectgroupVersion>1.1</reportingobjectgroupVersion>
         <rowperpatientreportsVersion>1.5.6-SNAPSHOT</rowperpatientreportsVersion>
         <rwandahivflowsheetVersion>0.5.5</rwandahivflowsheetVersion>
         <rwandaprimarycareVersion>2.0.7</rwandaprimarycareVersion>
         <rwandareportsVersion>2.5.8-SNAPSHOT</rwandareportsVersion>
-        <serializationVersion>0.2.11</serializationVersion>
+        <serializationVersion>0.2.12</serializationVersion>
         <simplelabentryVersion>1.8</simplelabentryVersion>
         <syncVersion>1.3</syncVersion>
-        <uicommonsVersion>2.3.0</uicommonsVersion>
+        <uicommonsVersion>2.4.0</uicommonsVersion>
         <uiframeworkVersion>3.11.0</uiframeworkVersion>
         <usagestatisticsVersion>1.4.2</usagestatisticsVersion>
         <webservicesRestVersion>2.14</webservicesRestVersion>
         <omodExportVersion>1.0</omodExportVersion>
         <validationVersion>1.0.1</validationVersion>
         <patientFlagsVersion>1.3.4</patientFlagsVersion>
-        <metadatadeployVersion>1.9.0</metadatadeployVersion>
         <emrapiVersion>1.21.0</emrapiVersion>
         <metadatadeployVersion>1.9.0</metadatadeployVersion>
+        <uilibraryVersion>2.0.6</uilibraryVersion>
+        <providermanagementVersion>2.9.0</providermanagementVersion>
         <!--<htmlwidgetsVersion>1.8.0</htmlwidgetsVersion>-->
+
+        <eventVersion>2.6.0</eventVersion>
+        <emrapiVersion>1.23.0</emrapiVersion>
+        <coreappsVersion>1.18.0</coreappsVersion>
+        <registrationcoreVersion>1.8.0</registrationcoreVersion>
+        <registrationappVersion>1.10.0</registrationappVersion>
+        <htmlformentryuiVersion>1.6.4</htmlformentryuiVersion>
+        <formentryappVersion>1.4.2</formentryappVersion>
+
 	</properties>
 
     <dependencies>
@@ -279,6 +289,71 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>uilibrary-api</artifactId>
+            <version>${uilibraryVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>providermanagement-api</artifactId>
+            <version>${providermanagementVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs</groupId>
+            <artifactId>event-api</artifactId>
+            <version>${eventVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>emrapi-api</artifactId>
+            <version>${emrapiVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>emrapi-api</artifactId>
+            <version>${emrapiVersion}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>coreapps-api</artifactId>
+            <version>${coreappsVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>htmlformentryui-api</artifactId>
+            <version>${htmlformentryuiVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>registrationapp-api</artifactId>
+            <version>${registrationappVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>registrationcore-api</artifactId>
+            <version>${registrationcoreVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
